Bug 91943 - weston-dnd leaks memory allocated in create_drag_icon()
Summary: weston-dnd leaks memory allocated in create_drag_icon()
Status: RESOLVED FIXED
Alias: None
Product: Wayland
Classification: Unclassified
Component: weston (show other bugs)
Version: 1.5.0
Hardware: x86-64 (AMD64) Linux (All)
: medium normal
Assignee: Wayland bug list
QA Contact:
URL:
Whiteboard:
Keywords:
Depends on: 91944
Blocks: 91948
  Show dependency treegraph
 
Reported: 2015-09-09 19:58 UTC by Michael Catanzaro
Modified: 2016-03-17 01:57 UTC (History)
1 user (show)

See Also:
i915 platform:
i915 features:


Attachments

Description Michael Catanzaro 2015-09-09 19:58:47 UTC
All of the memory weston-dnd allocates in create_drag_icon() in dnd.c is leaked. weston-dnd expects the memory to be freed in response to data_source.cancelled, but this is never emitted except for the clipboard data source.

One solution would be to enhance wl_data_source to indicate when the drag has been completed.


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.